# CrystalGrowth

./: .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  Kobayashi.cpp  Kobayashi.h  README.md  SIG2020_1D.h  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
shader/: fragShader.hlsl  vertexShader.hlsl
src/: DX12DefaultApp.cpp  DX12DrawingApp.cpp  DX12DrawingApp.h  Kobayashi.cpp  Kobayashi.h  Win32App.cpp  Win32App.h  dx12header.h  main.cpp
src/dx/: DX12DefaultApp.h  DX12DrawingApp.cpp  DX12DrawingApp.h  IDX12App.h  dx12header.h
src/sim/: Kobayashi.cpp  Kobayashi.h
